grammar_bnf.txt
BNF GRAMMAR SPECIFICATION FOR JAVA SYNTAX VALIDATION

===================================================================
CONSTRUCT 1: Simple Data-Type Declaration
===================================================================

<program> ::= <statement_list>

<statement_list> ::= <statement>
                   | <statement_list> <statement>

<statement> ::= <declaration>

<declaration> ::= <type> <identifier> ;
               | <type> <identifier> = <expression> ;

<type> ::= int | float | double | char | boolean | String | void

<identifier> ::= [a-zA-Z_][a-zA-Z0-9_]*

<expression> ::= <identifier>
              | <number>
              | <expression> <operator> <expression>

<operator> ::= + | - | * | /

<number> ::= [0-9]+ | [0-9]+.[0-9]+


===================================================================
CONSTRUCT 2: Array Declaration
===================================================================

<array_declaration> ::= <type> [] <identifier> ;
                     | <type> <identifier> [] ;
                     | <type> [] <identifier> = new <type> [ <number> ] ;


===================================================================
CONSTRUCT 3: Selection Statement (If-Else)
===================================================================

<if_statement> ::= if ( <condition> ) <block>
                | if ( <condition> ) <block> else <block>

<condition> ::= <expression> <relational_op> <expression>
             | <expression>

<relational_op> ::= < | > | <= | >= | == | != | && | ||

<block> ::= { <statement_list> }
         | { }


===================================================================
CONSTRUCT 4: Looping Construct (While)
===================================================================

<while_statement> ::= while ( <condition> ) <block>


===================================================================
CONSTRUCT 5: Function Declaration
===================================================================

<function_declaration> ::= <access_modifier> <return_type> <identifier> ( <parameter_list> ) <block>
                        | <return_type> <identifier> ( <parameter_list> ) <block>

<access_modifier> ::= public | private | protected

<return_type> ::= <type>

<parameter_list> ::= <parameter>
                  | <parameter_list> , <parameter>
                  | ε

<parameter> ::= <type> <identifier>


===================================================================
TOKENS DEFINITION (for reference)
===================================================================

Keywords: int, float, double, char, boolean, String, void, if, else, 
          while, public, private, protected, return, new

Operators: =, +, -, *, /, ==, !=, <, >, <=, >=, &&, ||, !, ++, --

Delimiters: ( ) { } [ ] ; ,

Identifiers: [a-zA-Z_][a-zA-Z0-9_]*

Numbers: [0-9]+ | [0-9]+.[0-9]+

Comments: // (single line) | /* */ (multi-line)


===================================================================
